<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:isScrollContainer="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/detalhes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent">

            <ImageView
                android:id="@+id/detalhe_imagem"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="300sp"/>

            <TextView
                android:id="@+id/detalhe_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/detalhe_descricao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:textColor="@color/gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12sp">
                <TextView
                    android:id="@+id/detalhe_preco_old"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/detalhe_preco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5sp">
                <TextView
                    android:id="@+id/detalhe_parcela"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/detalhe_parcelamento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginStart="5sp"
                    android:textSize="12sp"
                    android:text="@string/ver_parcel"/>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp"
                android:background="@color/green"
                android:textColor="@color/white"
                android:text="@string/comprar"
                android:textAllCaps="true"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/caracteristicas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/detalhes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caracteristicas"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/colorPrimaryDark"
                android:textAllCaps="true"/>

            <TextView
                android:id="@+id/detalhe_titulo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/detalhe_resposta1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/>

            <TextView
                android:id="@+id/detalhe_titulo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/detalhe_resposta2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/>

            <TextView
                android:id="@+id/detalhe_titulo3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/detalhe_resposta3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/avaliacoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/caracteristicas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avaliacoes"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/colorPrimaryDark"
                android:textAllCaps="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/detalhe_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"/>
                <TextView
                    android:id="@+id/detalhe_total_avaliacoes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15sp"
                    android:gravity="center_vertical"
                    android:textColor="@color/gray"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/ult_coment"/>

            <TextView
                android:id="@+id/detalhe_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="10sp"/>

            <TextView
                android:id="@+id/detalhe_comentario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginTop="10sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/viu_comprou"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/avaliacoes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viu_comprou"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/colorPrimaryDark"
                android:textAllCaps="true"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/viucomprou_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp"
                android:background="@color/green"
                android:textColor="@color/white"
                android:text="@string/comprar"
                android:textAllCaps="true"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>